Рефакторинг кода, фикс критических ошибок